--- a/force-app/main/default/aura/TravelVendorPanel/TravelVendorPanel.cmp
+++ b/force-app/main/default/aura/TravelVendorPanel/TravelVendorPanel.cmp
@@ -26,44 +26,32 @@
                 <div class="slds-grid slds-wrap">
                     <!--Country Filter-->
                     <div class="slds-col slds-size--6-of-12 slds-p-horizontal_medium ">
-                        <aura:if isTrue="{!empty(v.selectedVendors)}">
-                            <lightning:input disabled="true" label="{!$Label.c.SS_Country}" placeholder="{!$Label.c.TS_Select_or_add_vendor_first}"/>
-                            <aura:set attribute="else">
-                                <c:VisitResultSharingCountryLookup
-                                        aura:id="countryLookup"
-                                        isMultiEntry="true"
-                                        value="{!v.countryCodes}"
-                                        onchange="{!c.getFilteredSS}"
-                                        placeholder="{!$Label.c.TS_Select_Country}"
-                                        placeholderSelected="{!$Label.c.TS_Select_Another_Country}"
-                                        ctpId="{!v.recordId}" includeStates="false"
-                                        isInclude="true"/>
-                            </aura:set>
-                        </aura:if>
+                        <c:VisitResultSharingCountryLookup
+                                aura:id="countryLookup"
+                                isMultiEntry="true"
+                                value="{!v.countryCodes}"
+                                onchange="{!c.getFilteredSS}"
+                                placeholder="{!$Label.c.TS_Select_Country}"
+                                placeholderSelected="{!$Label.c.TS_Select_Another_Country}"
+                                ctpId="{!v.recordId}" includeStates="false"
+                                isInclude="true"/>
                     </div>
-                    <aura:if isTrue="{!empty(v.selectedVendors)}">
-                        <div class="slds-col slds-size--6-of-12 slds-p-horizontal_medium">
-                            <lightning:input disabled="true" label="{!$Label.c.Report_Study_Site}" placeholder="{!$Label.c.TS_Select_or_add_vendor_first}"/>
-                        </div>
-                        <aura:set attribute="else">
-                            <div class="slds-col slds-size--6-of-12 slds-p-horizontal_medium">
-                                <c:VisitResultSharingSSLookup
-                                        ctpId="{!v.recordId}"
-                                        isMultiEntry="true"
-                                        value="{!v.selectedManuallySSIds}"
-                                        onchange="{!c.getFilteredSS}"
-                                        placeholder="{!$Label.c.TS_Select_Study_Site}"
-                                        placeholderSelected="{!$Label.c.TS_Select_Another_Study_Site}"
-                                        includeSS="true"/>
-                            </div>
-                        </aura:set>
-                    </aura:if>
+                    <div class="slds-col slds-size--6-of-12 slds-p-horizontal_medium">
+                        <c:VisitResultSharingSSLookup
+                                ctpId="{!v.recordId}"
+                                isMultiEntry="true"
+                                value="{!v.selectedManuallySSIds}"
+                                onchange="{!c.getFilteredSS}"
+                                placeholder="{!$Label.c.TS_Select_Study_Site}"
+                                placeholderSelected="{!$Label.c.TS_Select_Another_Study_Site}"
+                                includeSS="true"/>
+                    </div>
                     <div class="slds-col slds-size--6-of-12 slds-p-horizontal_medium">
                         <c:RRLookup
                                 objectName="TravelVendorSettings__c"
                                 lookupName="TravelVendor__c"
                                 selectedRecords="{!v.selectedVendors}"
-                                onchange="{!c.getFilteredSS}"
+                                onchange="{!c.addVendor}"
                         />
                     </div>
                     <div class="slds-col slds-size--4-of-12 slds-var-m-top_x-small">
@@ -83,7 +71,7 @@
                     </c:CustomModal>
                     <!--Save changes button-->
                     <div class="slds-col slds-size--2-of-12 save-btn slds-p-horizontal_medium slds-var-m-top_x-small">
-                        <lightning:button  variant="brand"
+                        <lightning:button variant="brand"
                                           class="slds-m-around--medium" label="{!$Label.c.BTN_Save}"
                                           onclick="{!c.doSave}"/>
                     </div>
@@ -94,63 +82,50 @@
                 <table aria-multiselectable="true"
                        class="slds-table slds-table_cell-buffer slds-table_bordered slds-table_striped" role="grid">
                     <thead>
-                    <aura:if isTrue="{!!empty(v.vendorItems)}">
-                        <tr class="slds-line-height_reset">
-                            <th class="" scope="col">
-                                <div class="slds-truncate slds-text-align--center">{!$Label.c.SS_Country}</div>
-                            </th>
-                            <th class="" scope="col">
-                                <div class="slds-truncate slds-text-align--center">{!$Label.c.Report_Study_Site}</div>
-                            </th>
+                    <tr class="slds-line-height_reset">
+                        <th class="" scope="col">
+                            <div class="slds-truncate slds-text-align--center">{!$Label.c.SS_Country}</div>
+                        </th>
+                        <th class="" scope="col">
+                            <div class="slds-truncate slds-text-align--center">{!$Label.c.Report_Study_Site}</div>
+                        </th>
+                        <th class="cell-wrap" scope="col">
+                            <div>{!$Label.c.TS_Study_Site_Number}</div>
+                        </th>
+                        <aura:iteration items="{!v.selectedVendors}" var="vendor">
                             <th class="cell-wrap" scope="col">
-                                <div>{!$Label.c.TS_Study_Site_Number}</div>
+                                <div class="slds-medium-show--inline-block">
+                                    <ui:inputCheckbox aura:id="columnLang" class="slds-medium-show--inline-block slds-float--left slds-m-right--x-small slds-dl_horizontal__label" label="{!vendor.Name}" text="{!vendor.Id}"
+                                                      change="{!c.columnCheckboxStateChange}"/>
+<!--                                    <label class="slds-medium-show&#45;&#45;inline-block"> {!vendor.Name}</label>-->
+                                </div>
                             </th>
-                            <aura:iteration items="{!v.selectedVendors}" var="vendor">
-                                <th class="cell-wrap" scope="col">
-                                    <div>{!vendor.Name}</div>
-                                </th>
-                            </aura:iteration>
-                        </tr>
-                        <aura:set attribute="else">
-                            <div class="slds-text-heading_medium slds-text-align_center">
-                                <aura:if isTrue="{!empty(v.selectedVendors)}">
-                                    <label>{!$Label.c.TS_Select_Travel_Vendor_First}</label>
-                                    <aura:set attribute="else">
-                                        <aura:if
-                                                isTrue="{!and(empty(v.countryCodes, v.selectedManuallySSIds))}">
-                                            <label>{!$Label.c.TS_Select_Country_Or_Study_Site}</label>
-                                        </aura:if>
-                                    </aura:set>
-                                </aura:if>
-                            </div>
-                        </aura:set>
-                    </aura:if>
+                        </aura:iteration>
+                    </tr>
                     </thead>
                     <tbody>
-                    <aura:if isTrue="{!!empty(v.vendorItems)}">
-                        <aura:iteration items="{!v.vendorItems}" var="item">
-                            <tr>
-                                <th data-label="Country" scope="row">
-                                    <div class="slds-truncate slds-text-align--center"
-                                         title="">{!item.studySite.Site__r.BillingCountry}</div>
-                                </th>
-                                <td data-label="Study Site">
-                                    <div class="slds-truncate slds-text-align--center">
-                                        <a href="javascript:void(0);" onclick="{!c.navToRecord}" tabindex="-1"
-                                           data-ssid="{!item.studySite.Id}">{!item.studySite.Name}</a>
-                                    </div>
+                    <aura:iteration items="{!v.vendorItems}" var="item">
+                        <tr>
+                            <th data-label="Country" scope="row">
+                                <div class="slds-truncate slds-text-align--center"
+                                     title="">{!item.studySite.Site__r.BillingCountry}</div>
+                            </th>
+                            <td data-label="Study Site">
+                                <div class="slds-truncate slds-text-align--center">
+                                    <a href="javascript:void(0);" onclick="{!c.navToRecord}" tabindex="-1"
+                                       data-ssid="{!item.studySite.Id}">{!item.studySite.Name}</a>
+                                </div>
+                            </td>
+                            <td data-label="Name">
+                                <div class="slds-truncate slds-text-align--center">{!item.studySite.Study_Site_Number__c}</div>
+                            </td>
+                            <aura:iteration items="{!item.vendorSettings}" var="selectedVendorIdSetting">
+                                <td>
+                                    <ui:inputCheckbox value="{!selectedVendorIdSetting.isEnable__c}" label="{!selectedVendorIdSetting.Vendor__r.Name}"/>
                                 </td>
-                                <td data-label="Name">
-                                    <div class="slds-truncate slds-text-align--center">{!item.studySite.Study_Site_Number__c}</div>
-                                </td>
-                                <aura:iteration items="{!item.vendorSettings}" var="selectedVendorIdSetting">
-                                    <td>
-                                        <ui:inputCheckbox value="{!selectedVendorIdSetting.isEnable__c}"/>
-                                    </td>
-                                </aura:iteration>
-                            </tr>
-                        </aura:iteration>
-                    </aura:if>
+                            </aura:iteration>
+                        </tr>
+                    </aura:iteration>
                     </tbody>
                 </table>
             </div>
