--- a/force-app/main/default/layouts/Patient_Visit__c-Patient Visit Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Patient_Visit__c-Patient Visit Layout.layout-meta.xml
@@ -46,6 +46,10 @@
                 <behavior>Edit</behavior>
                 <field>Participant_Enrollment__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Notified__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
