--- a/force-app/main/default/aura/ReferHealthcareProviderForm/ReferHealthcareProviderForm.cmp
+++ b/force-app/main/default/aura/ReferHealthcareProviderForm/ReferHealthcareProviderForm.cmp
@@ -18,26 +18,33 @@
             <lightning:input class="healthcare-input" type="text" required="true"
                              label="{!$Label.c.HealthCare_Providers_Email}" value="{!v.healthCareProvider.Email__c}"
                              onblur="{!c.checkContact}" onchange="{!c.checkFields}"
-                             disabled="{!v.healthCareProvider.Id}" aura:id="hcpEmail"/>
+                             title="{!!v.healthCareProvider.Id &amp;&amp; v.action.disabled ? $Label.c.RSN_Your_permissions_do_not_permit_this_action : ''}"
+                             disabled="{!v.healthCareProvider.Id || (!v.healthCareProvider.Id &amp;&amp; v.action.disabled)}"
+                             aura:id="hcpEmail"/>
         </div>
         <div class="slds-col slds-size--1-of-1 slds-large-size--3-of-12">
             <lightning:input class="healthcare-input" type="text" required="true"
                              label="{!$Label.c.HealthCare_Providers_First_Name}"
                              value="{!v.healthCareProvider.First_Name__c}"
                              onchange="{!c.checkFields}"
-                             disabled="{!v.healthCareProvider.Id  || v.providerFound}" aura:id="hcpFirstName"/>
+                             title="{!!v.healthCareProvider.Id &amp;&amp; v.action.disabled ? $Label.c.RSN_Your_permissions_do_not_permit_this_action : ''}"
+                             disabled="{!v.healthCareProvider.Id  || v.providerFound || (!v.healthCareProvider.Id &amp;&amp; v.action.disabled)}"
+                             aura:id="hcpFirstName"/>
         </div>
         <div class="slds-col slds-size--1-of-1 slds-large-size--3-of-12">
             <lightning:input class="healthcare-input" type="text" required="true"
                              label="{!$Label.c.HealthCare_Providers_Last_Name}"
                              value="{!v.healthCareProvider.Last_Name__c}"
                              onchange="{!c.checkFields}"
-                             disabled="{!v.healthCareProvider.Id  || v.providerFound}" aura:id="hcpLastName"/>
+                             disabled="{!v.healthCareProvider.Id  || v.providerFound || (!v.healthCareProvider.Id &amp;&amp; v.action.disabled)}"
+                             aura:id="hcpLastName"
+                             title="{!!v.healthCareProvider.Id &amp;&amp; v.action.disabled ? $Label.c.RSN_Your_permissions_do_not_permit_this_action : ''}"/>
         </div>
         <div class="slds-col slds-size--3-of-12 slds-large-size--2-of-12" style="margin-top:23px">
-            <aura:if isTrue="{!!v.healthCareProvider.Id &amp;&amp; !v.action.disabled}">
+            <aura:if isTrue="{!!v.healthCareProvider.Id}">
                 <button class="apollo-btn tertiary " style="padding:0;height:40px;min-width:160px"
-                        onclick="{!c.doConnect}" disabled="{!!v.isValid}">{!$Label.c.HealthCare_Provider_Connect}</button>
+                        onclick="{!c.doConnect}" disabled="{!!v.isValid || v.action.disabled}"
+                        title="{!!v.healthCareProvider.Id &amp;&amp; v.action.disabled ? $Label.c.RSN_Your_permissions_do_not_permit_this_action : ''}">{!$Label.c.HealthCare_Provider_Connect}</button>
             </aura:if>
             <aura:if isTrue="{!v.healthCareProvider.Id}">
                 <button class="apollo-btn tertiary " style="padding:0;height:40px;min-width:160px"
