--- a/force-app/main/default/aura/Form_EditPatientInfo/Form_EditPatientInfo.cmp
+++ b/force-app/main/default/aura/Form_EditPatientInfo/Form_EditPatientInfo.cmp
@@ -154,6 +154,17 @@
                     <div class="label">{!$Label.c.MRN_Internal_Id}</div>
                     <lightning:input type="text" value="{!v.pe.MRN_Id__c}" onblur="{!c.doCheckFields}"/>
                 </div>
+                <div class="rr-form-element slds-col slds-size--1-of-1 slds-large-size--1-of-3">
+                    <div class="label">
+                        <aura:if isTrue="{!v.screeningRequired}">
+                            <abbr title="required" class="slds-required">*</abbr>
+                        </aura:if>Visit Plan TODO
+                    </div>
+                    <c:rrSelect options="{!v.formData.visitPlansLVList}"
+                                value="{!v.pe.Visit_Plan__c}" placeholder="{!$Label.c.PG_AC_Select}" required="true"
+                                useSentenceFont="false" onchange="{!c.doCheckFields}"/>
+                </div>
+
             </div>
         </div>
     </div>
