--- a/force-app/main/messaging/components/EmailActionBtnText.component
+++ b/force-app/main/messaging/components/EmailActionBtnText.component
@@ -5,7 +5,7 @@
 <apex:component id="EmailActionBtnText" access="global" controller="EmailActionBtnController">
     <apex:attribute name="buttonLabel" type="String" description="" access="global"/>
     <apex:attribute name="buttonURL" type="String" description="" access="global" assignTo="{!buttonURLString}"/>
-    <apex:attribute name="caseId" type="String" description="" access="global" assignTo="{!caseIdString}"/>
+    <apex:attribute name="sObjectId" type="String" description="" access="global" assignTo="{!sObjectIdString}"/>
 
     {!buttonLabel}: {!resultURL}
 </apex:component>
